[Fixed] fix land height issue on ios device

--- a/public/stylesheets/roadEditor.css
+++ b/public/stylesheets/roadEditor.css
@@ -154,6 +154,7 @@
 
 .usingSection {
     width: 100%;
+    height: 10px;
     flex-grow: 1;
 }
 
